Porduct listing alignment fixed

--- a/packages/system/public/assets/css/common.css
+++ b/packages/system/public/assets/css/common.css
@@ -26,7 +26,7 @@
     margin-left: 0
 }
 .content {
-    margin-top: 150px;
+    margin-top: 120px;
     margin-bottom: 50px;
     width: 100%
 }
